Fix missing padding in reconnect message

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -183,6 +183,7 @@ div.reconnect-wrapper {
     position: fixed;
     bottom: 1.5em;
     left: 1.5em;
+    padding: .85em;
     display: flex;
     align-items: center;
     background-color: $inactive-input-color;
